--- a/partials/criancas/criancas.html
+++ b/partials/criancas/criancas.html
@@ -322,9 +322,19 @@
                                                 <abbr title="Phone"><strong>Sala: </strong></abbr>{{sala}} 
                                             </address>
                                             <p>
-                                                <span><strong>Data:</strong> {{dataFatura}}</span><br/>
+                                                <span><strong>Propina:</strong> {{propina}}$00</span><br/>
+                                            </p>
+                                            <p>
+                                                <span><strong>Almoço:</strong> {{almoco}}$00</span><br/>
+                                            </p>
+                                            <p>
+                                                <span><strong>Lingua Inglesa:</strong> {{linguaInglesa}}$00</span><br/>
+                                            </p>
+                                            <p>
+                                                <span><strong>Lingua Francesa:</strong> {{linguaFrancesa}}$00</span><br/>
                                             </p>
                                         </div>
+
                                     </div>
                                     <div class="table-responsive m-t">
                                         <table class="table invoice-table">
